test/libyul/yulSyntaxTests/invalid/clash_with_builtin_name.yul
{
    function loadimmutable(setimmutable) -> datasize {}
    let dataoffset
}
// ----
// ParserError 5568: (15-28): Cannot use builtin function name "loadimmutable" as identifier name.
// ParserError 5568: (29-41): Cannot use builtin function name "setimmutable" as identifier name.
// ParserError 5568: (46-54): Cannot use builtin function name "datasize" as identifier name.
// ParserError 5568: (66-76): Cannot use builtin function name "dataoffset" as identifier name.
